--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=6033233
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.mvc.hiddenmethod.filter.enabled=true
+server.port=8080
+spring.mvc.static-path-pattern=/static/**
+spring.jpa.generate-ddl=false
